tests/parse_print/autogen/769~final/stderr.expected
Error:
    tests/parse_print/autogen/769~final/spec.essence:5:41:
  |
5 |     [{2} | l_1 : set (maxSize freq(mset(var1), var1) - (1 - 3) % 1 ** 3) of
  |                                         ^^^^
Cannot use variable of category : decision in the context of Domain
